Update gallery layout: remove scroll, straighten images, and align in grid

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV proposal </title>
+    <title>Website Personal </title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png">
 </head>
@@ -30,6 +30,18 @@
                 <div class="contact-item">
                     <p>Address</p>
                     <p>Kalidoni Hill, Palembang</p>
+                </div>
+                <div class="contact-item">
+                    <p>Instagram</p>
+                    <p>@tommyy.2007</p>
+                </div>
+                <div class="contact-item">
+                    <p>Tiktok</p>
+                    <p>@tommyy.2007</p>
+                </div>
+                <div class="contact-item">
+                    <p>GitHub</p>
+                    <p>github.com/MrSonday</p>
                 </div>
             </div>            
         </div>
