Update CV with latest changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <p1>I learned programming languages such as HTML, CSS, and JavaScript to create web designs and applications.</p1>
                     </div>
 
-                    <span class="item-date">2023 - 2025  Modelling</span>
+                    <span class="item-date">2023 - 2025  Modeling</span>
                     <div class="item-content">
                         <h4>Blender 3d</h4>
                         <p>Designer 3D - Creator</p>
