--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                     <div class="gallery-item">
                         <img src="images/blender.jpeg" alt="Project 3">
                     </div>
+                    <div class="gallery-item">
+                        <img src="images/blender.png" alt="Project 4">
+                    </div>
                 </div>
             </div>
             
