Add top-right nav buttons (Home/Image/Store/Social)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         </div>
 
         <div class="right-column">
+            <div class="top-nav">
+                <a class="nav-btn" href="https://mrsonday.github.io/website/">Home</a>
+                <a class="nav-btn" href="https://mrsonday.github.io/website/#gallery">Image</a>
+                <a class="nav-btn" href="https://mrsonday.github.io/website/store">Store</a>
+                <a class="nav-btn" href="https://mrsonday.github.io/website/#social">Social</a>
+            </div>
             
             <div class="name-title">
                 <img src="images/logo.png" alt="Logo" class="site-logo">
