Fix HTML tags, harden modal script, remove auto-scroll

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="top-nav">
                 <a class="nav-btn" href="https://mrsonday.github.io/website/">Home</a>
                 <a class="nav-btn" href="https://mrsonday.github.io/website/#gallery">Image</a>
-                <a class="nav-btn" href="https://mrsonday.github.io/website/store">Store</a>
+                <a class="nav-btn" href="https://mrsonday.github.io/website/#store">Store</a>
                 <a class="nav-btn" href="https://mrsonday.github.io/website/#social">Social</a>
             </div>
             
@@ -69,7 +69,7 @@
                     <div class="item-content">
                         <h4>Informatics Engineering</h4>
                         <p>Ignatius Global School</p>
-                        <p1>Currently studying at Ignatius Global School majoring in Informatics Engineering, focusing on software development, data structures, algorithms, and computer systems.</p1>
+                        <p>Currently studying at Ignatius Global School majoring in Informatics Engineering, focusing on software development, data structures, algorithms, and computer systems.</p>
                     </div>
                 </div>
             </div>
@@ -81,28 +81,28 @@
                     <div class="item-content">
                         <h4>Motivation from koenigsegg</h4>
                         <p>koenigsegg - sweden</p>
-                        <p1>This is what motivates me to socialize with people around me and also increase my knowledge in the automotive field.</p1>
+                        <p>This is what motivates me to socialize with people around me and also increase my knowledge in the automotive field.</p>
                     </div>
 
                     <span class="item-date">2019 - 2025  Present</span>
                     <div class="item-content">
                         <h4>Roblox Creator</h4>
                         <p>Freelance - Creator</p>
-                        <p1>I added my experience from childhood to the present with Roblox Studio, so that's what made me interested in 3D design.</p1>
+                        <p>I added my experience from childhood to the present with Roblox Studio, so that's what made me interested in 3D design.</p>
                     </div>
 
                     <span class="item-date">2023 - 2025  Computer Class</span>
                     <div class="item-content">
                         <h4>Visual Studio Code</h4>
                         <p>Programming - Creator</p>
-                        <p1>I learned programming languages such as HTML, CSS, and JavaScript to create web designs and applications.</p1>
+                        <p>I learned programming languages such as HTML, CSS, and JavaScript to create web designs and applications.</p>
                     </div>
 
                     <span class="item-date">2023 - 2025  Modeling</span>
                     <div class="item-content">
                         <h4>Blender 3d</h4>
                         <p>Designer 3D - Creator</p>
-                        <p1>I learned to create 3D models and animations using Blender 3D software to produce visual content.</p1>
+                        <p>I learned to create 3D models and animations using Blender 3D software to produce visual content.</p>
                     </div>
             </div>
 
